add javafx tests