@@ -4,9 +4,22 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!--module properties-->
+    <groupId>quadratic-race</groupId>
+    <artifactId>quadratic-race</artifactId>
+    <version>1.0-SNAPSHOT</version>
+
+    <!--<parent>-->
+        <!--<groupId>org.springframework.boot</groupId>-->
+        <!--<artifactId>spring-boot-starter-parent</artifactId>-->
+        <!--<version>2.1.0.RELEASE</version>-->
+        <!--<relativePath/>-->
+    <!--</parent>-->
+
     <properties>
 
         <!--build main properties-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.release>11</java.release>
         <build.name>quadratic-race</build.name>
         <build.name.suffix>executable</build.name.suffix>
@@ -22,11 +35,6 @@
         <javafx-controls.version>11</javafx-controls.version>
 
     </properties>
-
-    <!--module properties-->
-    <groupId>${build.name}</groupId>
-    <artifactId>${build.name}</artifactId>
-    <version>${build.version}</version>
 
     <!--packaging properties-->
     <name>${build.name}</name>
@@ -44,6 +52,22 @@
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <release>${java.release}</release>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>
+                        --add-exports=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                    </argLine>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                 </configuration>
             </plugin>
 
@@ -72,6 +96,19 @@
 
     <dependencies>
 
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-security</artifactId>-->
+            <!--&lt;!&ndash;<version>2.1.0.RELEASE</version>&ndash;&gt;-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-test</artifactId>-->
+            <!--&lt;!&ndash;<version>2.1.0.RELEASE</version>&ndash;&gt;-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
+
         <dependency>
             <groupId>javazoom</groupId>
             <artifactId>jlayer</artifactId>
@@ -83,6 +120,27 @@
             <artifactId>javafx-controls</artifactId>
             <version>${javafx-controls.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>4.0.15-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit</artifactId>
+            <version>4.0.15-alpha</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>org.testfx</groupId>-->
+            <!--<artifactId>openjfx-monocle</artifactId>-->
+            <!--<version>jdk-11+26</version>-->
+            <!--<scope>test</scope>-->
+        <!--</dependency>-->
 
     </dependencies>
 
